third_party/move/tools/move-unit-test/tests/test_sources/missing_data.exp
Running Move unit tests
[ FAIL    ] 0x1::MissingData::missing_data
[ PASS    ] 0x1::MissingData::missing_data_captured
[ PASS    ] 0x1::MissingData::missing_data_exact
[ FAIL    ] 0x1::MissingData::missing_data_from_other_function
0x1::MissingData::missing_data
Output: Ok(ChangeSet { accounts: {} })
0x1::MissingData::missing_data_captured
Output: Ok(ChangeSet { accounts: {} })
0x1::MissingData::missing_data_exact
Output: Ok(ChangeSet { accounts: {} })
0x1::MissingData::missing_data_from_other_function
Output: Ok(ChangeSet { accounts: {} })

Test failures:

Failures in 0x1::MissingData:

┌── missing_data ──────
│ error[E11001]: test failure
│   ┌─ missing_data.move:6:9
│   │
│ 5 │     fun missing_data() acquires Missing {
│   │         ------------ In this function in 0x1::MissingData
│ 6 │         borrow_global<Missing>(@0x0);
│   │         ^^^^^^^^^^^^^ Test was not expected to error, but it gave a MISSING_DATA (code 4008) error originating in the module 0000000000000000000000000000000000000000000000000000000000000001::MissingData rooted here
│ 
│ 
└──────────────────


┌── missing_data_from_other_function ──────
│ error[E11001]: test failure
│   ┌─ missing_data.move:6:9
│   │
│ 5 │     fun missing_data() acquires Missing {
│   │         ------------ In this function in 0x1::MissingData
│ 6 │         borrow_global<Missing>(@0x0);
│   │         ^^^^^^^^^^^^^ Test was not expected to error, but it gave a MISSING_DATA (code 4008) error originating in the module 0000000000000000000000000000000000000000000000000000000000000001::MissingData rooted here
│ 
│ 
│ stack trace
│ 	MissingData::missing_data_from_other_function(tests/test_sources/missing_data.move:12)
│ 
└──────────────────

Test result: FAILED. Total tests: 4; passed: 2; failed: 2
